# zrc-c

./: .gitmodules  CMakeLists.txt  README.md
chipmunk/: CMakeLists.txt
handmade-math/: CMakeLists.txt
klib/: CMakeLists.txt
libzrc/: CMakeLists.txt
libzrc/include/: camera.h  color.h  guid.h  moving_average.h  timer.h  zmath.h  zrc.h
libzrc/src/: ai.c  align.c  camera.c  caster.c  color.c  contact_damage.c  flight.c  guid.c  life.c  locomotion.c  moving_average.c  physics.c  physics_controller.c  rl.c  seek.c  sense.c  timer.c  ttl.c  zmath.c  zrc.c
libzrcdraw/: CMakeLists.txt
libzrcdraw/include/: blur.h  control.h  draw.h  draw_ai.h  draw_blur.h  draw_locomotion.h  draw_spines.h  draw_visual.h  draw_world.h  stdatomic.h  ui.h  zrc_draw.h
libzrcdraw/src/: blur.c  control.c  draw.c  draw_ai.c  draw_blur.c  draw_locomotion.c  draw_spines.c  draw_visual.c  draw_world.c  font.c  spines.c  ui.c  zrc_draw.c
libzrcdraw/src/fonts/: consolas-16.h
libzrcgym/: CMakeLists.txt
libzrcgym/include/: ai.h  env.h  gym.h
libzrcgym/src/: ai.c  env.c  gym.c
libzrchost/: CMakeLists.txt
libzrchost/include/: tf_brain.h  zrc_host.h
libzrchost/src/: tf_brain.c  zrc_host.c
par/: CMakeLists.txt
sokol/: CMakeLists.txt
tensorflow/include/tensorflow/c/: c_api.h
tinycthread/: CMakeLists.txt
zrc/: CMakeLists.txt
zrc/include/: blur.h  control.h  draw.h  draw_locomotion.h  draw_visual.h  draw_world.h  font.h  lsgl.h  spines.h  ui.h
zrc/src/: blur.c  control.c  draw.c  draw_blur.c  draw_locomotion.c  draw_spines.c  draw_visual.c  draw_world.c  font.c  lsgl.c  main.c  spines.c  ui.c
zrc/src/fonts/: arial-16.h
zrc/src/shaders/: curves.glsl  sdf.glsl  util.glsl
zrcgymtest/: CMakeLists.txt
zrcgymtest/src/: main.c
